--- a/secciones/contacto.html
+++ b/secciones/contacto.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="INDUMENTARIA, MUJER, FEMENINO, CUESTIONARIO, SATISFACCION">
+    <meta name="description" content="Este es nuestro cuestionario en el que podras 
+    indicarnos como fue tu experiencia comprando por la web">
+    
      
     <!-- BTS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -16,7 +20,7 @@
  
     <!-- CSS -->
     <link rel="stylesheet" href="../css/style.css">
-    <title>AlgoBonito</title>
+    <title>Contacto</title>
 
 </head>
 <body>
