--- a/secciones/jeansPantalones.html
+++ b/secciones/jeansPantalones.html
@@ -4,6 +4,9 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="keywords" content="INDUMENTARIA, MUJER, FEMENINO, PANTALONES, JOGUINS">
+        <meta name="description" content="En está página podras encontrar jeans y pantalones 
+        para vestirte como más te guste">
          
         <!-- BTS -->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -16,7 +19,7 @@
      
         <!-- CSS -->
         <link rel="stylesheet" href="../css/style.css">
-        <title>AlgoBonito</title>
+        <title>Prendas Inferiores</title>
     </head>
 <body>
     <header>
