Se agregaron animaciones

--- a/secciones/contacto.html
+++ b/secciones/contacto.html
@@ -103,12 +103,17 @@
                         <option value="Blanco">Negro</option>
                         </select>
                     </div>
-                    
+
                     <div class="cuestionario">
-                        <p>¿Desea recibir información sobre las últimas ofertas y novedades?</p>
-                        <input type="checkbox" name="acepta" value="1">
-                        <input class="enviar" type="submit" value="Enviar">
-                        <input class="resetear" type="reset" value="RESETEAR">
+                        <article class="checkbox">
+                            <p>¿Desea recibir información sobre las últimas ofertas y novedades?</p>
+                            <input type="checkbox" name="acepta" value="1">
+                        </article>
+                        <article class="botones">
+                            <input class="enviar" type="submit" value="Enviar">
+                            <input class="resetear" type="reset" value="RESETEAR">
+                        </article>
+                        
                     </div>
 
                 </form>
