Se eliminó el video para sumar a la responsividad

--- a/secciones/shortsPolleras.html
+++ b/secciones/shortsPolleras.html
@@ -192,12 +192,10 @@
 
         <article class="article-tips">
             
-            <h2>TIPS</h2>   
             <div>
-                <iframe class="video" width="480" height="270" src="https://www.youtube.com/embed/zWr0fB6uj20" 
-                title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
-                allowfullscreen></iframe>
-            
+                <img class="sale" src="https://images.pexels.com/photos/3905874/pexels-photo-3905874.jpeg?
+                auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Imagen Sale">
+
             </div>
         </article>
 
