Cambios en el SASS

--- a/secciones/contacto.html
+++ b/secciones/contacto.html
@@ -43,7 +43,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="../secciones/contacto.html">contacto</a>
+                    <a href="../secciones/contacto.html">Encuesta</a>
                 </li>
             </ul>
         </nav>
@@ -73,31 +73,34 @@
                     </div>
                     
                     <div class="selector" >
-                        <p>Ingrese el talle:</p>
-                        <div>XS
-                            <input type="radio" name="talle" value="XS">
+                        <p> ¿Cuál es la frecuencia con que realiza compras en nuestro sitio web?</p>
+                        <div>Semanal        
+                            <input type="radio" name="frecuencia" value="semanal">
                         </div>
-                        <div>S
-                            <input type="radio" name="talle" value="S">
+                        <div>Mensual
+                            <input type="radio" name="frecuencia" value="mensual">
                         </div>
-                        <div>M
-                            <input type="radio" name="talle" value="M">
+                        <div>Trimestral
+                            <input type="radio" name="frecuencia" value="trimestral">
                         </div>
-                        <div>L
-                            <input type="radio" name="talle" value="L">
+                        <div>Anual
+                            <input type="radio" name="frecuencia" value="anual">
                         </div>
-                        <div>XL
-                            <input type="radio" name="talle" value="XL">
+                        <div>Solo en una ocación
+                            <input type="radio" name="frecuencia" value="ocacional">
                         </div>
                     </div>
 
                     <div class="listaDesplegable">
-                        <p>Seleccione el color</p>
-                        <select name="color" id="color"> 
-                        <option value="Rojo">Rojo</option>
-                        <option value="Gris">Gris</option>
-                        <option value="Blanco">Blanco</option>
-                        <option value="Blanco">Negro</option>
+                        <p>Del 1 al 5 siendo 5 muy problable y 1 muy inprobable:
+                            ¿Qué tan probable es que recomiende nuestros productos?
+                        </p>
+                        <select name="numero" id="color"> 
+                        <option value="1">  1   </option>
+                        <option value="2">  2   </option>
+                        <option value="3">  3   </option>
+                        <option value="4">  4   </option>
+                        <option value="5">  5   </option>
                         </select>
                     </div>
 
