--- a/secciones/jeansPantalones.html
+++ b/secciones/jeansPantalones.html
@@ -41,7 +41,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="../secciones/contacto.html">contacto</a>
+                    <a href="../secciones/contacto.html">Encuesta</a>
                 </li>
             </ul>
         </nav>
@@ -71,11 +71,19 @@
         </header>
 
     <main>
+
+        <section class="destacados">
+            <h2>
+                PANTALONES 
+            </h2>
+        </section>
+
       <section class="section-imagenes">
 <!-- NEW -->
             <article>
               <figure>
                 <a href="../secciones/contacto.html" target="_blank">
+                    <div class="new">NEW</div>
                     <img src="../img/jean6.jfif" alt="Jean elastizado">
                     
                 </a>
@@ -87,6 +95,7 @@
         <article>
           <figure>
             <a href="../secciones/contacto.html" target="_blank">
+                <div class="new">NEW</div>
                 <img src="../img/pantalon1.jfif" alt="Pantalon joguer verde">
                 
             </a>
@@ -98,6 +107,7 @@
         <article>
           <figure>
             <a href="../secciones/contacto.html" target="_blank">
+                <div class="new">NEW</div>
                 <img src="../img/pantalon2.jpg" alt="Pantalon de jean clasico blanco">
             </a>
             <figcaption>Clásico White</figcaption>
