--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
                 <div>
                     
                     <a href="./secciones/nosotros.html" target="_blank">
-                        <p>Nosotros</p>       
+                        <p class="nosotros-link">Nosotros</p>       
                     </a>
 
                 </div>
