--- a/secciones/nosotros.html
+++ b/secciones/nosotros.html
@@ -50,11 +50,11 @@
         </nav>
     </header>
 
-    <main class="main-nostros">
+    <main class="main-nosotros">
         
-        <section id="nosotros">
-            <article class="logo">
-                <figure>
+        <section class="nosotros">
+            <article class="logo2">
+                <figure class="figure-logo2">
                     <img src="../img/logo1.png" alt="imagen-logo-algo bonito">
                 </figure>
             </article>
@@ -65,9 +65,11 @@
                     Sobre Nosotros
                 </h2>
                 <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam architecto excepturi sed?
-                    Suscipit expedita odio officiis reprehenderit dolor nobis beatae cum porro architecto est. 
-                    Sunt id officia consectetur aliquam fugit.
+                    Algo Bonito es una marca dedicada a mujeres que han encontrado en 
+                    la libertad y naturalidad su punto diferenciador. Nuestra filosofía
+                    consiste en demostrar que un estilo elegante, funcional y cómodo,
+                    a la vez que sencillo, es posible.
+                    
                 </p>
 
             </article>
@@ -77,18 +79,18 @@
         <section class="misionVisionValores">
 
             <article class="mision">
-                <p>Mision</p>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magnam atque ipsa velit exercitationem pariatur vero.</p>
+                <p class="misionVisionValores-titulo">Mision</p>
+                <p class="misionVisionValores-parrafo">Ofrecer prendas de gran calidad a precios atractivos cumpliendo las demandas y expectativas de los clientes.</p>
             </article>
 
             <article class="vision">
-                <p>Vision</p>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magnam atque ipsa velit exercitationem pariatur vero.</p>
+                <p class="misionVisionValores-titulo">Vision</p>
+                <p class="misionVisionValores-parrafo">Ser la marca más prestigiosa del mercado liderando la comercialización y confección de nuestros productos, desde una organización que crea un mejor día a día tanto para los clientes como para nuestros colaboradores.</p>
             </article>
 
             <article class="valores">
-                <p>valores</p>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magnam atque ipsa velit exercitationem pariatur vero.</p>
+                <p class="misionVisionValores-titulo">Valores</p>
+                <p class="misionVisionValores-parrafo">Lealtad - Confianza - Responsabilidad - Superación - Pasión</p>
             </article>
         </section>
 
