Se agrego 4 html de prendas

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <section class="section-imagenes">
             <article>
                 <figure>
-                    <a href="./secciones/contacto.html" target="_blank">
+                    <a href="./secciones/prenda1.html" target="_blank">
                         <div class="new">NEW</div>
                         <img src="./img/vestido2.jfif" alt="Vestido venecia negro">
                     </a>
@@ -85,7 +85,7 @@
 
             <article>
                 <figure>
-                    <a href="./secciones/contacto.html" target="_blank">
+                    <a href="./secciones/prenda2.html" target="_blank">
                         <div class="new">NEW</div>
                         <img src="./img/remera2.jfif" alt="Camiza de lanilla tazz">
                         
@@ -97,7 +97,7 @@
 
             <article>
                 <figure>
-                    <a href="./secciones/contacto.html" target="_blank">
+                    <a href="./secciones/prenda3.html" target="_blank">
                         <div class="new">NEW</div>
                         <img src="./img/buzo1.jfif" alt="buzo marron">
                     </a>
@@ -108,7 +108,7 @@
 
             <article>
                 <figure>
-                    <a href="./secciones/contacto.html" target="_blank">
+                    <a href="./secciones/prenda4.html" target="_blank">
                         <div class="new">NEW</div>
                         <img src="./img/vestido1.jfif" alt="Vestido Moscu Violeta">
                         
